# micro-agent

./: ._SUPABASE_SCHEMA.md  ._requirements.txt  ._supabase_schema.sql  .gitignore  CLAUDE.md  DEPLOY_VERCEL.md  PRD_AI_Web_Builder.md  README.md  SUPABASE_SCHEMA.md  design_guidelines.md  higgsfield.ai-DESIGN.md  lovable.dev-DESIGN.md  plan.md  railway.json  requirements.txt  run.sh  skills-cli.mjs  supabase_schema.sql  vercel.json
.emergent/: emergent.yml  emergent_todos.json
api/: index.py
backend/: check_models.py  rag.py  railway.json  requirements.txt  server.py  smoke_stream.py  test_server_helpers.py
backend/builder/: main.py  stream_parser.py  system_prompts.py
backend/migrations/: ._003_token_credits.sql  ._004_generated_images.sql  ._005_rag_and_docgen.sql  ._006_promo_usage.sql  003_token_credits.sql  004_generated_images.sql  005_rag_and_docgen.sql  006_promo_usage.sql  007_builder_projects.sql  008_user_memories.sql  009_onboarding_survey.sql  010_response_comparisons.sql  011_security_hardening.sql  (+1 more)
cli/: install.ps1  install.sh  main.py  microagent  pyproject.toml
cli/npm/: install.js  microagent.js  package.json
cli/src/microagent_cli/: agent.py  backend_api.py  cli.py  llm.py  session.py
cli/src/microagent_cli/tools/: executor.py
frontend/: .gitignore  craco.config.js  package-lock.json  package.json  tsconfig.json
skills/: code-reviewer.md  content-writer.md  data-analyst.md  email-writer.md  seo-writer.md  skills.json
supabase_migrations/: 002_artifacts.sql
test_output/: gen_ba289935.py
test_reports/: iteration_1.json
(+116 files in other folders)
